<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/last_tweet_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/label_last_tweets"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/refresh_last_tweet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/touch_selector"
            android:contentDescription="@string/refresh_tweets"
            android:padding="8dp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/last_tweet_label" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/tweets_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_tweet_label">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tweets_rv"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="16dp"
                android:background="#09FFFFFF"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:background="#09FFFFFF"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/tweet_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/empty_view"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/empty_view" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/separation_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tweets_layout" />

        <TextView
            android:id="@+id/selected_tweet_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/label_selected_tweet"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separation_line1" />

        <ImageView
            android:id="@+id/speak_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/touch_selector"
            android:contentDescription="@string/read_tweet"
            android:padding="8dp"
            android:src="@drawable/ic_voice"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/selected_tweet_label" />

        <LinearLayout
            android:id="@+id/selected_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_tweet_label">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/selected_tweet_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/label_selected_tweet_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/colorGrey"
                    android:textSize="16sp"
                    android:visibility="visible"
                    tools:text="Dragon 2 has a good orbit. Second burn will last for about 125 seconds. Dragon 2 has a good orbit. Second burn will last for about 125 seconds." />

                <ImageView
                    android:id="@+id/clear_iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/touch_selector"
                    android:contentDescription="@string/empty_content_description"
                    android:padding="8dp"
                    android:src="@drawable/ic_clear"
                    android:visibility="visible" />

            </LinearLayout>

            <Button
                android:id="@+id/notification_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_send_notification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selected_layout" />

        </LinearLayout>

        <View
            android:id="@+id/separation_line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_layout" />

        <TextView
            android:id="@+id/webcast_link_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/label_webcast_link"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separation_line3" />

        <ImageView
            android:id="@+id/refresh_webcast_link"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/touch_selector"
            android:contentDescription="@string/refresh_link"
            android:padding="8dp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/webcast_link_label" />

        <ImageView
            android:id="@+id/webcast_preview"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/webcast_preview"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/webcast_link_label"
            tools:src="@drawable/video" />

        <ProgressBar
            android:id="@+id/webcast_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/webcast_preview"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/webcast_preview" />

        <EditText
            android:id="@+id/webcast_edit_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/label_webcast_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/webcast_preview" />

        <Button
            android:id="@+id/webcast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_send_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webcast_edit_link" />

        <View
            android:id="@+id/separation_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webcast_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>